# amd-smi-wsl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
src/amdsmi/: __init__.py  _backend.py  _constants.py  _device_map.py  _enums.py  _event.py  _exceptions.py  _func_list.py  _handles.py  _interface.py
tests/: test_dropin.py
